# goperflab

./: README.md  __init__.py  graders.py  inference.py  models.py  requirements.txt  rewards.py  score_utils.py
go-bench-repo/: go.mod
go-bench-repo/string_concatenation/: string.go  string_test.go
go_perflab/: README.md  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  rewards.py  tasks.py
go_perflab/go-bench-repo/string_concatenation/: string_test.go
go_perflab/server/: Dockerfile  app.py  env.py
go_perflab/tests/: test_env.py  test_patch_parser.py
scripts/: validate-submission.sh  validate_openenv.sh
server/: __init__.py  app.py  env.py
tests/: test_env.py  test_scores.py
